--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,8 @@
 # just a flag
 ENV = 'development'
 
-# base api
-VUE_APP_BASE_API = '/dev-api'
+# base api 触发跨域，使反向代理生效
+VUE_APP_BASE_API = '/api'
+
+# 定义服务启动的端口号
+port = 8888
